# turtlebot3_line_follower

./: README.md  install.sh  line_follower.md
linefollow/: CMakeLists.txt  package.xml  setup.py
linefollow/launch/: turtlebot3_API.launch
linefollow/msg/: color.srv
linefollow/src/: contohAPI.py  controller.py  maju.py
linefollow/src/linefollow/: Robot_API.py
turtlebot3_gazebo/: CMakeLists.txt  package.xml  setup.py
turtlebot3_gazebo/launch/: turtlebot3_linefollow.launch
turtlebot3_gazebo/models/turtlebot3_linefollow/arena/: model.config  model.sdf
turtlebot3_gazebo/models/turtlebot3_linefollow/arena/materials/scripts/: arena.material
turtlebot3_gazebo/models/turtlebot3_linefollow/course/: model.sdf
turtlebot3_gazebo/src/: path_ekf_plotter.py  path_odom_plotter.py  robot.py  save_odom.py  simple_line_follow.py
turtlebot3_gazebo/urdf/: turtlebot3_waffle.gazebo.xacro  turtlebot3_waffle.urdf.xacro
turtlebot3_gazebo/worlds/: turtlebot3_linefollow.world  turtlebot3_linefollow2.world
turtlebot3_simulations/: package.xml
